# crypt-manager

./: Cargo.toml  Dockerfile  build.rs
.github/workflows/: release.yml
proto/: CryptManagerGrpcService.proto
src/: keys_repository.rs  lib.rs  main.rs  settings.rs
src/app_ctx/: app_ctx.rs
src/grpc_server/: crypt_manager.rs  mod.rs  server.rs  telemetry.rs
src/nosql/: mod.rs
src/nosql/test_data/: models.rs
