[package]
name = "crypt-manager"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http-is-alive-shared = { tag = "0.1.1", git = "https://github.com/MyJetTools/http-is-alive-shared.git" }
my-logger = { tag = "0.2.0", git = "https://github.com/MyJetTools/my-logger.git" }
rust-extensions = { tag = "0.1.2", git = "https://github.com/MyJetTools/rust-extensions.git" }

my-settings-reader = { tag = "0.1.5", git = "https://github.com/MyJetTools/my-settings-reader.git", features = [
    "background-reader",
] }
flurl = { tag = "0.2.3", git = "https://github.com/MyJetTools/fl-url.git" }

my-no-sql-server-abstractions = { tag = "0.1.0", git = "https://github.com/MyJetTools/my-no-sql-server-abstractions.git" }
my-no-sql-data-writer = { tag = "0.1.5", git = "https://github.com/MyJetTools/my-no-sql-data-writer.git" }
my-no-sql-tcp-reader = { tag = "0.1.7", git = "https://github.com/MyJetTools/my-no-sql-tcp-reader" }
my-telemetry = { tag = "0.2.2", git = "https://github.com/MyJetTools/my-telemetry.git" }
crypt-utils = { tag = "0.1.0", git = "https://github.com/MyJetTools/crypt-utils.git" }
my-telemetry-writer = { tag = "0.1.3", git = "https://github.com/MyJetTools/my-telemetry-writer.git" }

tonic = { version = "*", features = ["tls", "tls-roots", "prost"] }
hyper = { version = "*", features = ["full"] }
tokio = { version = "*", features = ["full"] }
tokio-stream = "*"
futures-core = "*"
async-trait = "*"
tokio-util = "*"
prost = "*"
prost-types = "*"
serde = "*"
serde_yaml = "*"
serde_json = "*"
anyhow = "*"

[build-dependencies]
tonic-build = { version = "*", features = ["prost"] }
