[package]
name = "crypt-manager"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
service-sdk = { tag = "0.2.5", git = "https://github.com/MyJetTools/service-sdk.git", features = [
    "grpc",
    "macros",
] }
crypt-utils = { tag = "0.1.0", git = "https://github.com/MyJetTools/crypt-utils.git" }


tonic = { version = "*", features = ["tls", "tls-roots", "prost"] }
tokio = { version = "*", features = ["full"] }
tokio-stream = "*"
futures-core = "*"
async-trait = "*"
tokio-util = "*"
prost = "*"
prost-types = "*"
serde = "*"
serde_yaml = "*"
serde_json = "*"
anyhow = "*"

[build-dependencies]
ci-utils = { git = "https://github.com/MyJetTools/ci-utils.git", tag = "0.1.0" }
